[gd_scene load_steps=5 format=2]

[ext_resource path="res://global/managers/ui/UIManager.gd" type="Script" id=1]
[ext_resource path="res://inventory/ui/InventoryScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://inventory/ui/Hotbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://interactable/container/ContainerScreen.tscn" type="PackedScene" id=5]


[node name="UIManager" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MenuRoot" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -317.0
margin_top = -162.0
margin_right = 321.0
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="MenuRoot"]
margin_left = 7.0
margin_top = 7.0
margin_right = 631.0
margin_bottom = 445.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerContainer" type="PanelContainer" parent="MenuRoot/MenuContainer"]
margin_right = 624.0
margin_bottom = 146.0

[node name="Control" parent="MenuRoot/MenuContainer/ContainerContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 617.0
margin_bottom = 139.0

[node name="TabContainer" type="HBoxContainer" parent="MenuRoot/MenuContainer"]
margin_top = 150.0
margin_right = 624.0
margin_bottom = 214.0
alignment = 1

[node name="Panel" type="Panel" parent="MenuRoot/MenuContainer/TabContainer"]
margin_left = 144.0
margin_right = 208.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="Panel2" type="Panel" parent="MenuRoot/MenuContainer/TabContainer"]
margin_left = 212.0
margin_right = 276.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="Panel3" type="Panel" parent="MenuRoot/MenuContainer/TabContainer"]
margin_left = 280.0
margin_right = 344.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="Panel4" type="Panel" parent="MenuRoot/MenuContainer/TabContainer"]
margin_left = 348.0
margin_right = 412.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="Panel5" type="Panel" parent="MenuRoot/MenuContainer/TabContainer"]
margin_left = 416.0
margin_right = 480.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )

[node name="InventoryContent" type="PanelContainer" parent="MenuRoot/MenuContainer"]
margin_top = 218.0
margin_right = 624.0
margin_bottom = 438.0
rect_min_size = Vector2( 540, 220 )
mouse_filter = 1

[node name="InventoryGrid" parent="MenuRoot/MenuContainer/InventoryContent" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 617.0
margin_bottom = 213.0

[node name="HotbarRoot" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -277.0
margin_top = -79.0
margin_right = 277.0
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar" parent="HotbarRoot" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 547.0
margin_bottom = 77.0
